# sd-practice

./: .gitignore  prometheus.yml
todo list/TodoList/: TodoList.sln
todo list/TodoList/TodoList.App/: Dockerfile  Program.cs  Run.Dockerfile  TodoList.App.csproj  TodoList.App.http  WeatherForecast.cs  appsettings.Docker.json  appsettings.json
todo list/TodoList/TodoList.App.Tests/: TodoItemControllerTests.cs  TodoItemControllerTestsAdd.cs  TodoItemControllerTestsDelete.cs  TodoItemControllerTestsDeleteAll.cs  TodoItemControllerTestsGet.cs  TodoItemControllerTestsGetAll.cs  TodoItemControllerTestsUpdate.cs  TodoList.App.Tests.csproj
todo list/TodoList/TodoList.Client/: CrudClient.cs  TodoList.Client.csproj
todo list/TodoList/TodoList.ConsoleApp/: Program.cs  TodoList.ConsoleApp.csproj
todo list/TodoList/TodoList.Domain/: DeleteResult.cs  ITodoItemMetrics.cs  ITodoItemRepository.cs  Result.cs  TodoItem.cs  TodoList.Domain.csproj
todo list/TodoList/TodoList.Domain.Tests/: TodoItemServiceTests.cs  TodoItemServiceTestsAccess.cs  TodoItemServiceTestsAccessAll.cs  TodoItemServiceTestsAdd.cs  TodoItemServiceTestsDelete.cs  TodoItemServiceTestsDeleteAll.cs  TodoItemServiceTestsUpdate.cs  TodoList.Domain.Tests.csproj
todo list/TodoList/TodoList.Persistence.Tests/: InMemoryTodoItemRepositoryTests.cs  SqlServerTodoItemRepositoryTests.cs  TodoList.Persistence.Tests.csproj
todo list/apm/: apm-server.yml
todo list/metricbeat/: Dockerfile  metricbeat.yml
todo list/otel/: otel-collector-config.yaml
todo list/spark/: docker-compose.yml  pyproject.toml
(+74 files in other folders)
