[tool.poetry]
name = "spark"
version = "0.1.0"
description = ""
authors = ["Vladislav.Evtushenko <Vladislav.Evtushenko@entaingroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
